# vildrose

./: .editorconfig  .gitignore  .gitmessage  AGENTS.md  Cargo.toml  LICENSE.md  contributing.md  cspell.json  flake.nix  index.html  justfile  readme.md
.github/workflows/: CI.yml  docs.yml
.zed/: settings.json  tasks.json
api/: crates.js  help.html  index.html  settings.html  src-files.js
api/search.index/: 07c62a0532.js  099b51c54a.js  25f594316f.js  26fe6bda28.js  root.js
api/search.index/crateNames/: b4c107b835.js
api/search.index/desc/: 169e4c0f9f.js  a5ee9498fb.js
api/search.index/entry/: bca7b7e911.js  de5abcd816.js
api/search.index/function/: 11f4426a9a.js  96ba1f46f6.js
api/search.index/generic_inverted_index/: a785abbd1c.js  d344767298.js
api/search.index/name/: 38b2adbbe6.js  f3bb33320c.js
api/search.index/normalizedName/: 563a6535dc.js  8481b71c84.js
api/search.index/path/: 56e9dcb055.js  743d2355e9.js
api/search.index/type/: 76053852b4.js  b6460e6270.js
api/src/vildrose_core/: lib.rs.html  trit.rs.html  word.rs.html
api/vildrose_core/: all.html  index.html  sidebar-items.js
api/vildrose_core/trit/: enum.Trit.html  fn.idx.html  index.html  sidebar-items.js  static.ADD_CARRY.html  static.ADD_SUM.html  static.CONSENSUS.html  static.TMAX.html  static.TMIN.html
api/vildrose_core/word/: index.html  macro.define_word!.html  macro.define_word.html  macro.impl_word_methods!.html  macro.impl_word_methods.html  sidebar-items.js  struct.Tryte.html  struct.Word27.html  trait.WordType.html  type.Word9.html
book/: 404.html  index.html  print.html  roadmap.html  searcher-09f2665d.js  searchindex-1cf0bc99.js  searchindex-66287b9d.js  searchindex-6f1f779b.js  searchindex-9fea805b.js  searchindex-b28a5e97.js  searchindex-cabf99df.js  ternary-primer.html  toc-2e00afdd.js  toc-8a72a0e5.js  toc.html
book/architecture/: index.html  isa.html  memory-map.html  register-file.html  word-sizes.html
book/guides/: assembler.html  debugger.html  index.html  vm.html
book/ternary-logic/: index.html  kleene-uses.html  kleenes.html  ternary-logic.html  trits.html  word-arithmetics.html  word-radix.html  words.html
crates/vildrose-core/: Cargo.toml
crates/vildrose-core/src/: lib.rs  trit.rs  word.rs
crates/vildrose-vm/: readme.md
docs/: book.toml
docs/site/: index.html
docs/src/: README.md  SUMMARY.md  roadmap.md  ternary-primer.md
docs/src/architecture/: README.md  isa.md  memory-map.md  register-file.md  word-sizes.md
docs/src/guides/: assembler.md  debugger.md  (+2 more)
docs/theme/: custom.css
theme/: custom.css
(+25 files in other folders)
