[workspace]
resolver = "3"
members = [
    "crates/vildrose-core",
    # "crates/vildrose-isa",
    # "crates/vildrose-vm",
    # "crates/vildrose-asm",
    # "crates/vildrose-dbg",
    # "crates/vildrose-display",
    # "crates/vildrose-rv32i",
    # "crates/vildrose-py",
]

# Only build active crates with bare `cargo build`.
# Expand this list as each phase is reached.
default-members = [
    "crates/vildrose-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["silvijai"]
license = "MIT"
repository = "https://github.com/silvijai/vildrose"
homepage = "https://github.com/silvijai/vildrose"
keywords = ["ternary", "balanced-ternary", "vm", "computing"]
categories = ["emulators", "science"]

[workspace.dependencies]
vildrose-core = { path = "crates/vildrose-core" }
vildrose-isa = { path = "crates/vildrose-isa" }
vildrose-vm = { path = "crates/vildrose-vm" }
vildrose-asm = { path = "crates/vildrose-asm" }

# Testing
proptest = "1"
insta = { version = "1", features = ["ron"] }

# Error handling
thiserror = "2"

# Python bindings (vildrose-py only)
pyo3 = { version = "0.23", features = ["extension-module"] }

[workspace.lints.rust]
unsafe_code    = "forbid"
missing_docs   = "warn"
unused_results = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 1
